2006-04-02  Martin Grimme  <martin.grimme@lintegra.de>

	* src/*: Added playlist and playlist widget.
	Added support for freedesktop.org compliant CD covers (.directory
	files) as "albumart" can create them for instance.
	
2006-03-20  Martin Grimme  <martin.grimme@lintegra.de>

	* src/audio.h: Added a simple switch to simulate audio playback in
	the scratchbox SDK environment, where I don't have sound.

2005-11-21  Martin Grimme  <martin@pycage.de>

	* src/gui.c: Implemented fullscreen mode.
	Added [Play] and [Stop] buttons.

	* src/decoder.c: Applied patch by Ralph Giles <giles@xiph.org> for
	case insensitive comment tag names.

	* src/gui.c: Applied patch by Ralph Giles <giles@xiph.org> for volume
	control with the [+] and [-] keys.

2005-11-20  Martin Grimme  <martin@pycage.de>

	* src/main.c (main): Cleaned up and finally separated the GUI from
	functionality.

2005-11-19  Martin Grimme  <martin@pycage.de>

	* src/decoder.c: Fixed some bugs.

	* src/stream.c: Implemented seeking in the stream.

2005-11-17  Martin Grimme  <martin@pycage.de>

	* src/audio.c: Implemented time tagging of the audio data. This is
	needed for reporting the correct position of the audio playback
	instead of the current decoding position, which is some seconds ahead.

2005-11-16  Martin Grimme  <martin@pycage.de>

	* src/audio.c: Switched to SDL for audio output.
	Implemented volume control.

2005-11-15  Martin Grimme  <martin@pycage.de>

	* src/decoder.c: Go to sleep when there's no data to play.

	* oggplay.desktop (X-Osso-Service): 
	* oggplay.service (Name): Changes service name since OSSO currently
	only accepts com.nokia.

2005-11-05  Martin Grimme  <martin@pycage.de>

	* Initial Release 0.10