@@ -1,5 +1,9 @@
 2006-04-02  Martin Grimme  <martin.grimme@lintegra.de>
 
+	* src/gui.c: Added button for clearing the playlist.
+
+2006-04-02  Martin Grimme  <martin.grimme@lintegra.de>
+
 	* src/*: Added playlist and playlist widget.
 	Added support for freedesktop.org compliant CD covers (.directory
 	files) as "albumart" can create them for instance.
